<resources>
    <string name="app_name">Daily Expenses</string>
    <string name="setDate">Set Date</string>

    <string name="breakfast">Breakfast</string>
    <string name="tea">Tea/Coffee</string>
    <string name="snacks">Snacks</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="misc">Misc</string>

    <string name="spentReasonHint">On what did you spend?</string>

    <string name="string10">10</string>
    <string name="string20">20</string>
    <string name="string30">30</string>
    <string name="string40">40</string>
    <string name="string50">50</string>
    <string name="string100">100</string>

    <string name="spentReasonAmountHint">Amount</string>

    <string name="view">Today\'s\n Details</string>

    <string name="viewMonth">Monthly\n Details</string>

    <string name="save">Save</string>

    <string name="todaysExpenditure">Today\'s Expenditure: Rs. %1$s</string>

    <string name="rs">Rs. %1$s</string>

    <string name="expnditureDay">Total expenditure: Rs. %1$s</string>

    <string name="expnditureMonth">Total expenditure of month: Rs. %1$s</string>

    <string name="expnditureForItem">Total expenditure on %1$s: Rs. %2$s</string>

    <string name="validDataError">Enter valid data</string>

    <string name="exportSpecificDay">Export current date\'s data</string>

    <string name="exportDatabase">Export entire database</string>

    <string name="error">Error occurred</string>

    <string name="enterFileName">Enter file name</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="tipSetDate">Select date</string>
    <string name="tipCommonItems">Quickly add common items</string>
    <string name="tipAdjustAndSave">Easily adjust amount and save</string>
    <string name="tipOk">Okay!</string>
    <string name="tipGotIt">Got It</string>
    <string name="tipStart">Lets Start</string>
    <string name="tipViewForMonth">View details of current month</string>
    <string name="tipListViewSingleClick">Click to view details of item</string>
    <string name="tipListViewLongPress">Long press to edit item</string>
    <string name="tipMonthClick">Click to view details of month</string>


    <string name="infrequentItem">Infrequent</string>

    <string name="action_item_tag">Tags</string>

    <string name="showingAllNotify">Showing all items</string>
    <string name="excludingInfrequentNotify">Excluding infrequent items</string>

    <string name="backupCompleteNotify">Backup complete</string>
    <string name="restoreCompleteNotify">Restore complete</string>

    <string name="exportSuccessfulNotify">Successfully Exported</string>
    <string name="backupNotFoundNotify">No recent backup found</string>

    <string name="expenseItem">on %1$s</string>
    <string name="delete">Delete</string>
    <string name="editSuccess">Successfully Saved</string>
    <string name="deleteSuccess">Deleted Successfully</string>
    <string name="deleteConfirmation">Delete selected item?</string>
    <string name="noData">No data available</string>
    <string name="sort_arrow">↓</string>
    <string name="export_monthly">Export Monthly Details</string>
    <string name="reminderNameHint">Item Name</string>
    <string name="AddReminder">Add</string>
    <string name="setReminderTimeHint">Click to set time</string>
    <string name="tag_hint">tag</string>
    <string name="daily_tag">Daily</string>
    <string name="done">Done</string>
    <string name="include_these">Include striked</string>
    <string name="exclude_these">Exclude striked</string>
    <string name="browseTags">View\nTags</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!--stats -->
    <string name="daily_average_string">Rs. %1$s is average expenditure per day.</string>
    <string name="most_expensive_string">%1$s is the most expensive item, costs Rs. %2$s.</string>
    <string name="week_expense_string">Spent in %1$s week: Rs. %2$s</string>
    <string name="weekend_expense_string">Spent in %1$s weekend: Rs. %2$s</string>
    <string name="settings_default_tag_label">Default tag</string>
    <string name="settings_default_filter_label">Default filter items</string>
    <string name="settings_default_filter_stats_label">Default filter items for stats</string>
</resources>
