<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suraj.dailyexpenses.AddReminderActivity">

    <EditText
        android:id="@+id/etReminderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminderNameHint" />

    <EditText
        android:id="@+id/etReminderAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etReminderName"
        android:hint="@string/spentReasonAmountHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/etReminderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etReminderAmount"
        android:hint="@string/setReminderTimeHint" />

    <Button
        android:id="@+id/btnAddReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etReminderTime"
        android:text="@string/AddReminder" />

</RelativeLayout>
