<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suraj.dailyexpenses.EditItemActivity">


    <EditText
        android:id="@+id/activity_edit_item_et_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/spentReasonHint" />

    <EditText
        android:id="@+id/activity_edit_item_et_item_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_item_et_reason"
        android:hint="@string/spentReasonAmountHint"
        android:inputType="number" />

    <EditText
        android:id="@+id/activity_edit_item_item_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_item_et_item_amount"
        android:layout_marginTop="10dp"
        android:hint="@string/tag_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_item_item_tag"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/activity_edit_item_btn_delete_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/delete"
            android:textColor="@android:color/white" />

    </FrameLayout>

</RelativeLayout>
